Fix text alignment on button

--- a/src/components/Home/CatalogSection/CatalogSection.module.scss
+++ b/src/components/Home/CatalogSection/CatalogSection.module.scss
@@ -61,6 +61,7 @@
     color: $main-font-color;
     box-shadow: 0 4px 4px $shadow-color;
     text-decoration: none;
+    text-align: center;
 }
 
 .categoryNameBlock, .toCatalogButton {
